--- a/midterm-bookly/index.html
+++ b/midterm-bookly/index.html
@@ -92,36 +92,40 @@
       <div class="row g-4">
         <div class="col-sm-6 col-md-3">
           <div class="card shadow-sm h-100">
-            <img src="images/images/product-item1.png" class="card-img-top img-fluid" alt="Book">
+            <img src="images/images/product-item1.png" class="card-img-top img-fluid" style="padding: 30px;" alt="Book">
             <div class="card-body">
-              <h6>House Of Sky Breath</h6>
+              <h5 class="fw-bold">House Of Sky Breath</h5>
+              <p class="text-muted mb-1 small">Lauren Asher</p>
               <p class="text-danger fw-bold">$870</p>
             </div>
           </div>
         </div>
         <div class="col-sm-6 col-md-3">
           <div class="card shadow-sm h-100">
-            <img src="images/images/product-item2.png" class="card-img-top img-fluid" alt="Book">
+            <img src="images/images/product-item2.png" class="card-img-top img-fluid" style="padding: 30px;" alt="Book">
             <div class="card-body">
-              <h6>Heartland Stars</h6>
+              <h5 class="fw-bold">Heartland Stars</h5>
+              <p class="text-muted mb-1 small">Lauren Asher</p>
               <p class="text-danger fw-bold">$870</p>
             </div>
           </div>
         </div>
         <div class="col-sm-6 col-md-3">
           <div class="card shadow-sm h-100">
-            <img src="images/images/product-item3.png" class="card-img-top img-fluid" alt="Book">
+            <img src="images/images/product-item3.png" class="card-img-top img-fluid" style="padding: 30px;" alt="Book">
             <div class="card-body">
-              <h6>Heavenly Bodies</h6>
+              <h5 class="fw-bold">Heavenly Bodies</h5>
+              <p class="text-muted mb-1 small">Lauren Asher</p>
               <p class="text-danger fw-bold">$870</p>
             </div>
           </div>
         </div>
         <div class="col-sm-6 col-md-3">
           <div class="card shadow-sm h-100">
-            <img src="images/images/product-item4.png" class="card-img-top img-fluid" alt="Book">
+            <img src="images/images/product-item4.png" class="card-img-top img-fluid" style="padding: 30px;" alt="Book">
             <div class="card-body">
-              <h6>His Saving Grace</h6>
+              <h5 class="fw-bold">His Saving Grace</h5>
+              <p class="text-muted mb-1 small">Lauren Asher</p>
               <p class="text-danger fw-bold">$870</p>
             </div>
           </div>
@@ -152,7 +156,7 @@
             <h4 class="fw-bold mb-4 fs-2">Featured</h4>
 
             <div class="d-flex mb-3 pb-3 border-bottom">
-              <img src="images/images/product-item2.png" alt="Book" class="me-3 rounded" style="width: 60px; height: 80px; object-fit: cover; font-weight: 900;">
+              <img src="images/images/product-item2.png" alt="Book" class="card me-3 rounded" style="width: 60px; height: 80px; object-fit: cover; font-weight: 900;">
               <div>
                 <h6 class="fw-bold mb-1">Echoes Of The Ancients</h6>
                 <p class="text-muted mb-1 small">Lauren Asher</p>
@@ -161,7 +165,7 @@
             </div>
 
             <div class="d-flex mb-3 pb-3 border-bottom">
-              <img src="images/images/product-item1.png" alt="Book" class="me-3 rounded" style="width: 60px; height: 80px; object-fit: cover; font-weight: 900;">
+              <img src="images/images/product-item1.png" alt="Book" class="card me-3 rounded" style="width: 60px; height: 80px; object-fit: cover; font-weight: 900;">
               <div>
                 <h6 class="fw-bold mb-1">The Midnight Garden</h6>
                 <p class="text-muted mb-1 small">Lauren Asher</p>
@@ -170,7 +174,7 @@
             </div>
 
             <div class="d-flex mb-2">
-              <img src="images/images/product-item3.png" alt="Book" class="me-3 rounded" style="width: 60px; height: 80px; object-fit: cover; font-weight: 900;">
+              <img src="images/images/product-item3.png" alt="Book" class="card me-3 rounded" style="width: 60px; height: 80px; object-fit: cover; font-weight: 900;">
               <div>
                 <h6 class="fw-bold mb-1">Shadow Of The Serpent</h6>
                 <p class="text-muted mb-1 small">Lauren Asher</p>
@@ -185,7 +189,7 @@
             <h4 class="fw-bold mb-4 fs-2">Latest Items</h4>
 
             <div class="d-flex mb-3 pb-3 border-bottom">
-              <img src="images/images/product-item4.png" alt="Book" class="me-3 rounded" style="width: 60px; height: 80px; object-fit: cover; font-weight: 900;">
+              <img src="images/images/product-item4.png" alt="Book" class="card me-3 rounded" style="width: 60px; height: 80px; object-fit: cover; font-weight: 900;">
               <div>
                 <h6 class="fw-bold mb-1">Whispering Winds</h6>
                 <p class="text-muted mb-1 small">Lauren Asher</p>
@@ -194,7 +198,7 @@
             </div>
 
             <div class="d-flex mb-3 pb-3 border-bottom">
-              <img src="images/images/product-item5.png" alt="Book" class="me-3 rounded" style="width: 60px; height: 80px; object-fit: cover; font-weight: 900;">
+              <img src="images/images/product-item5.png" alt="Book" class="card me-3 rounded" style="width: 60px; height: 80px; object-fit: cover; font-weight: 900;">
               <div>
                 <h6 class="fw-bold mb-1">The Forgotten Realm</h6>
                 <p class="text-muted mb-1 small">Lauren Asher</p>
@@ -203,7 +207,7 @@
             </div>
 
             <div class="d-flex mb-2">
-              <img src="images/images/product-item6.png" alt="Book" class="me-3 rounded" style="width: 60px; height: 80px; object-fit: cover; font-weight: 900;">
+              <img src="images/images/product-item6.png" alt="Book" class="card me-3 rounded" style="width: 60px; height: 80px; object-fit: cover; font-weight: 900;">
               <div>
                 <h6 class="fw-bold mb-1">Moonlit Secrets</h6>
                 <p class="text-muted mb-1 small">Lauren Asher</p>
@@ -281,11 +285,11 @@
           <h6 class="fw-bold mb-4 fs-4">Contact Us</h6>
           <p class="small mb-3">
             Do you have any queries or suggestions?<br>
-            <a href="mailto:yourinfo@gmail.com" class="text-decoration-none text-dark fw-semibold">yourinfo@gmail.com</a>
+            <a href="mailto:yourinfo@gmail.com" class="text-dark fw-semibold">yourinfo@gmail.com</a>
           </p>
           <p class="small mb-0">
             If you need support? Just give us a call.
-            <a href="tel:+5511122233344" class="text-decoration-none text-dark fw-semibold">+55 111 222 333 44</a>
+            <a href="tel:+5511122233344" class="text-dark fw-semibold">+55 111 222 333 44</a>
           </p>
         </div>
       </div>
